[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimorphite_dl"
version = "2025.03.21"
requires-python = ">=3.8"
dependencies = [ "rdkit" ]

description = "Dimorphite-DL adds hydrogen atoms to molecular representations, as appropriate for a user-specified pH range."

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dimorphite_dl = ["sample_molecules.smi", "site_substructures.smarts"]
# "dimorphite_dl.training_data" = ["*"]
